# ChangeLog for kde-misc/kosd
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kosd/ChangeLog,v 1.3 2011/01/31 05:56:17 tampakrap Exp $

  31 Jan 2011; Theo Chatzimichos <tampakrap@gentoo.org> -kosd-0.4.2.ebuild,
  kosd-0.6.0.ebuild:
  Remove old

*kosd-0.6.0 (06 Jan 2011)

  06 Jan 2011; Andreas K. Huettel <dilfridge@gentoo.org> +kosd-0.6.0.ebuild:
  Version bump

*kosd-0.4.2 (28 Oct 2009)

  28 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> +kosd-0.4.2.ebuild:
  Initial commit wrt #223837, thanks to Baldrun Orv for reporting.
